[package]
name = "beverley"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1.0", features = ["openssl"] }
hmac = "0.12.1"
openssl = "0.10.41"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["std", "derive"] }
serde_json = "1.0.85"
sha2 = "0.10.5"
